--- a/website/test.htm
+++ b/website/test.htm
@@ -58,40 +58,307 @@ var data = {
 			name: "Bitcoin",
 			shortname: "BTC",
 			price: 10000,
-			forks: [ {
-				name: "Bitcoin Cash",
-				shortname: "BCH",
-				ratio: 1,
-				date: "25.03.2017",
-				price: 10000,
-				link: "https://coinmarketcap.com/currencies/bitcoin-cash/"
-			}, {
-				name: "Bitcoin Gold",
-				shortname: "BTG",
-				ratio: 3,
-				date: "14.09.2017",
-				price: 5,
-				link: "https://coinmarketcap.com/currencies/bitcoin-gold/"
-			}
-			]
+			forks: [
+      {
+   "Name": "Bitcoin Cash",
+   "ShortName": "BCH",
+   "Ratio": 1,
+   "Price": "1024",
+   "Block": "478558",
+   "Date": "01.08.2017",
+   "Link": "https://coinmarketcap.com/currencies/bitcoin-cash/"
+ },
+ {
+   "Name": "Super Bitcoin",
+   "ShortName": "SBTC",
+   "Ratio": 1,
+   "Price": "16.64",
+   "Block": "498888",
+   "Date": "12.12.2017",
+   "Link": "https://coinmarketcap.com/currencies/super-bitcoin/"
+ },
+ {
+   "Name": "BitcoinX",
+   "ShortName": "BCX",
+   "Ratio": 10000,
+   "Price": "0.02",
+   "Block": "498888",
+   "Date": "12.12.2017",
+   "Link": "https://coinmarketcap.com/currencies/bitcoinx/"
+ },
+ {
+   "Name": "Lightning Bitcoin",
+   "ShortName": "LBTC",
+   "Ratio": 1,
+   "Price": "101.13",
+   "Block": "499999",
+   "Date": "18.12.2017",
+   "Link": "https://coinmarketcap.com/currencies/lightning-bitcoin/"
+ },
+ {
+   "Name": "Bitcoin God",
+   "ShortName": "GOD",
+   "Ratio": 1,
+   "Price": "44.68",
+   "Block": "5012225",
+   "Date": "25.12.2017",
+   "Link": "https://coinmarketcap.com/currencies/bitcoin-god/"
+ },
+ {
+   "Name": "Bitcoin Cash Plus",
+   "ShortName": "BCP",
+   "Ratio": 1,
+   "Price": "",
+   "Block": "501407",
+   "Date": "02.01.2018",
+   "Link": "NOT_FOUND"
+ },
+ {
+   "Name": "Bitcoin Uranium",
+   "ShortName": "BUM",
+   "Ratio": 1,
+   "Price": "",
+   "Block": "XXX",
+   "Date": "31.12.2017",
+   "Link": "NOT_FOUND"
+ },
+ {
+   "Name": "Bitcoin Atom",
+   "ShortName": "BCA",
+   "Ratio": 1,
+   "Price": "0.82",
+   "Block": "505888",
+   "Date": "January 2018",
+   "Link": "https://coinmarketcap.com/currencies/bitcoin-atom/"
+ },
+ {
+   "Name": "Bitcoin Silver",
+   "ShortName": "BTCS",
+   "Ratio": 1,
+   "Price": "",
+   "Block": "XXX",
+   "Date": "December 2017",
+   "Link": "NOT_FOUND"
+ },
+ {
+   "Name": "UnitedBitcoin ",
+   "ShortName": "UB",
+   "Ratio": 1,
+   "Price": "10.63",
+   "Block": "498777",
+   "Date": "12.12.2017",
+   "Link": "https://coinmarketcap.com/currencies/united-bitcoin/"
+ },
+ {
+   "Name": "Bitcoin Diamond",
+   "ShortName": "BCD",
+   "Ratio": 10,
+   "Price": "4.61",
+   "Block": "495866",
+   "Date": "24.11.2017",
+   "Link": "https://coinmarketcap.com/currencies/bitcoin-diamond/"
+ },
+ {
+   "Name": "Bitcoin Oil ",
+   "ShortName": "OBTC",
+   "Ratio": 10,
+   "Price": "",
+   "Block": "498888",
+   "Date": "12.12.2017",
+   "Link": "NOT_FOUND"
+ },
+ {
+   "Name": "Bitcoin World",
+   "ShortName": "BTW",
+   "Ratio": 10000,
+   "Price": "",
+   "Block": "499777",
+   "Date": "17.12.2017",
+   "Link": "NOT_FOUND"
+ },
+ {
+   "Name": "Bitcoin Stake",
+   "ShortName": "BTCS",
+   "Ratio": 100,
+   "Price": "",
+   "Block": "499999",
+   "Date": "19.12.2017",
+   "Link": "NOT_FOUND"
+ },
+ {
+   "Name": "Bitcoin Faith",
+   "ShortName": "BTF",
+   "Ratio": 1,
+   "Price": "",
+   "Block": "500000",
+   "Date": "19.12.2017",
+   "Link": "NOT_FOUND"
+ },
+ {
+   "Name": "Bitcoin Top",
+   "ShortName": "BTT",
+   "Ratio": 1,
+   "Price": "",
+   "Block": "501118",
+   "Date": "26.12.2017",
+   "Link": "NOT_FOUND"
+ },
+ {
+   "Name": "Bitcoin File",
+   "ShortName": "BIFI",
+   "Ratio": 1000,
+   "Price": "",
+   "Block": "501225",
+   "Date": "27.12.2017",
+   "Link": "NOT_FOUND"
+ },
+ {
+   "Name": "Bitcoin Segwit2X X11",
+   "ShortName": "B2X",
+   "Ratio": 1,
+   "Price": "0.85",
+   "Block": "501451",
+   "Date": "28.12.2017",
+   "Link": "https://coinmarketcap.com/currencies/segwit2x/"
+ },
+ {
+   "Name": "Bitcoin Pizza",
+   "ShortName": "BPA",
+   "Ratio": 1,
+   "Price": "",
+   "Block": "501888",
+   "Date": "01.01.2018",
+   "Link": "NOT_FOUND"
+ },
+ {
+   "Name": "Bitcoin Smart",
+   "ShortName": "BCS",
+   "Ratio": 1,
+   "Price": "",
+   "Block": "505050",
+   "Date": "21.01.2017",
+   "Link": "NOT_FOUND"
+ },
+ {
+   "Name": "Bitcoin Ore",
+   "ShortName": "BCO",
+   "Ratio": 1,
+   "Price": "",
+   "Block": "501949",
+   "Date": "31.12.2017",
+   "Link": "NOT_FOUND"
+ },
+ {
+   "Name": "Bitcoin LITE",
+   "ShortName": "BTCL",
+   "Ratio": 1,
+   "Price": "",
+   "Block": "XXX",
+   "Date": "30.01.2018",
+   "Link": "NOT_FOUND"
+ },
+ {
+   "Name": "Bitcoin Interest",
+   "ShortName": "BCI",
+   "Ratio": 1,
+   "Price": "",
+   "Block": "505083",
+   "Date": "22.01.2018",
+   "Link": "NOT_FOUND"
+ },
+ {
+   "Name": "Quantum Bitcoin",
+   "ShortName": "QBTC",
+   "Ratio": 1,
+   "Price": "",
+   "Block": "XXX",
+   "Date": "28.01.2018",
+   "Link": "NOT_FOUND"
+ },
+  {
+   "Name": "Bitcoin Private",
+   "ShortName": "BTCP",
+   "Ratio": 1,
+   "Price": "18.97",
+   "Block": "478558",
+   "Date": "01.08.2017",
+   "Link": "https://coinmarketcap.com/currencies/bitcoin-private/"
+ },
+ {
+   "Name": "ABitcoin ",
+   "ShortName": "ABTC",
+   "Ratio": 1,
+   "Price": "",
+   "Block": "498888",
+   "Date": "",
+   "Link": "https://www.abitcoin.one/"
+ },
+ {
+   "Name": "Bitcoin Hot ",
+   "ShortName": "BTH",
+   "Ratio": 1,
+   "Price": "",
+   "Block": "498848",
+   "Date": "",
+   "Link": "https://bithot.org/"
+ },
+ {
+   "Name": "BitEthereum",
+   "ShortName": "BITE",
+   "Ratio": 3.93946357,
+   "Price": "",
+   "Block": "500283",
+   "Date": "12.12.2017",
+   "Link": "https://www.bitethereum.io/"
+ },
+ {
+   "Name": "Bitcoin Rhodium",
+   "ShortName": "BTR",
+   "Ratio": 1,
+   "Price": "",
+   "Block": "",
+   "Date": "10.01.2018",
+   "Link": "https://www.bitcoinrh.org/"
+ },
+{
+   "Name": "Bitcoin Platinum",
+   "Scam": true,
+   "ShortName": "BTP",
+   "Ratio": 1,
+   "Price": "",
+   "Block": "498533",
+   "Date": "12.12.2017",
+   "Link": "https://cointelegraph.com/news/bitcoin-platinum-created-by-south-korean-teenager-as-a-scam-local-market-erupts"
+ },
+{
+   "Name": "BitcoinClean",
+   "Scam": true,
+   "ShortName": "BCL",
+   "Ratio": 1,
+   "Price": "",
+   "Block": "",
+   "Date": "20.03.2018",
+   "Link": "https://www.bitcoinclean.org/"
+ },
+]
 		}
 	]
 }
 var table = document.getElementById('table-forks')
 var sum = document.getElementById('sum-forks')
 
-var htmlToAdd = '<tr><th>#</th><th>Name</th><th>Fork date</th><th>Price</th><th>1 BTC=</th><th>1 BTC=</th></tr>'
+var htmlToAdd = '<tr><th>#</th><th>Name</th><th>Fork date</th><th>Fork Block</th><th>Price</th><th>1 BTC=</th><th>1 BTC=</th></tr>'
 var sumValues = 0
 
 data.coins[0].forks.map((e,index) => {
 	var row = document.createElement('tr')
-	var priceTimesRatio = e.price*e.ratio
+	var priceTimesRatio = e.Price*e.Ratio
 	sumValues+=priceTimesRatio
-	htmlToAdd += '<tr><td>#' + (index+1) + '</td><td><a href="'+e.link+'">' + e.name + '</a></td><td>'+ e.date+'</td><td>' + e.price + ' € </td><td>' + e.ratio + ' ' + e.shortname + '</td><td>'+priceTimesRatio+' € </td></tr>'
+	htmlToAdd += '<tr><td sorttable_customkey="'+index+'">#' + (index+1) + '</td><td><a href="'+e.Link+'">' + e.Name + '</a></td><td>'+ e.Date+'</td><td>'+ e.Block+'</td><td sorttable_customkey="'+e.Price+'">' + e.Price + ' € </td><td>' + e.Ratio + ' ' + e.ShortName + '</td><td sorttable_customkey="'+priceTimesRatio+'">'+priceTimesRatio+' € </td></tr>'
 })
 
 
-sum.innerHTML = '<b>Sum '+sumValues+' € </b>'
+sum.innerHTML = '<b>1 BTC= Sum forks '+sumValues+' €</b>'
 table.innerHTML = htmlToAdd
 
 </script>
@@ -575,5 +842,14 @@ var forEach = function(object, block, context) {
 	}
 };
 
+
+/* https://cryptocurrencyfacts.com/a-list-of-upcoming-bitcoin-forks-and-past-forks/
+https://99bitcoins.com/upcoming-bitcoin-forks/
+
+*/
+
 </script>
 </html>
+
+
+
