--- a/website/test.htm
+++ b/website/test.htm
@@ -21,31 +21,45 @@ table.sortable thead {
 
 <body class="w3-theme-l3">
 
-
-<div style="min-width:400px">
-
 <div class="w3-bar w3-large w3-theme-d4">
-	<span class="w3-bar-item" style="height: 32px"><svg xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns="http://www.w3.org/2000/svg" height="64" width="64" version="1.1" xmlns:cc="http://creativecommons.org/ns#" xmlns:dc="http://purl.org/dc/elements/1.1/">
-<g transform="translate(0.00630876,-0.00301984)">
-<path fill="#f7931a" d="m63.033,39.744c-4.274,17.143-21.637,27.576-38.782,23.301-17.138-4.274-27.571-21.638-23.295-38.78,4.272-17.145,21.635-27.579,38.775-23.305,17.144,4.274,27.576,21.64,23.302,38.784z"/>
-<path fill="#FFF" d="m46.103,27.444c0.637-4.258-2.605-6.547-7.038-8.074l1.438-5.768-3.511-0.875-1.4,5.616c-0.923-0.23-1.871-0.447-2.813-0.662l1.41-5.653-3.509-0.875-1.439,5.766c-0.764-0.174-1.514-0.346-2.242-0.527l0.004-0.018-4.842-1.209-0.934,3.75s2.605,0.597,2.55,0.634c1.422,0.355,1.679,1.296,1.636,2.042l-1.638,6.571c0.098,0.025,0.225,0.061,0.365,0.117-0.117-0.029-0.242-0.061-0.371-0.092l-2.296,9.205c-0.174,0.432-0.615,1.08-1.609,0.834,0.035,0.051-2.552-0.637-2.552-0.637l-1.743,4.019,4.569,1.139c0.85,0.213,1.683,0.436,2.503,0.646l-1.453,5.834,3.507,0.875,1.439-5.772c0.958,0.26,1.888,0.5,2.798,0.726l-1.434,5.745,3.511,0.875,1.453-5.823c5.987,1.133,10.489,0.676,12.384-4.739,1.527-4.36-0.076-6.875-3.226-8.515,2.294-0.529,4.022-2.038,4.483-5.155zm-8.022,11.249c-1.085,4.36-8.426,2.003-10.806,1.412l1.928-7.729c2.38,0.594,10.012,1.77,8.878,6.317zm1.086-11.312c-0.99,3.966-7.1,1.951-9.082,1.457l1.748-7.01c1.982,0.494,8.365,1.416,7.334,5.553z"/>
-</g>
-</svg>
-</span>
 
-  <span class="w3-bar-item">Bitcoin-Forks.com</span>
+  <div class="w3-bar-item w3-button"><div style="width:26px">
+    <svg xmlns="http://www.w3.org/2000/svg" version="1" viewBox="0, 0, 64, 64">
+  <path fill="#f7931a" d="M63 40A32 32 0 1 1 1 24a32 32 0 0 1 62 16z"/>
+  <path fill="#FFF" d="M46 27c1-4-2-6-7-8l2-5-4-1-1 5h-3l1-6-3-1-2 6-2-1-5-1-1 4 3 1 1 2-1 6-3 9-1 1h-3l-1 4 4 1h3l-2 6 4 1 1-6 3 1-1 6 3 1 1-6c6 1 11 1 13-5 1-4 0-7-3-8 2-1 4-2 4-6zm-8 12c-1 4-8 2-11 1l2-8c3 1 10 2 9 7zm1-12c-1 4-7 2-9 2l2-7c2 0 8 1 7 5z"/>
+</svg>
+</div>
+</div>
+
+  <span class="w3-bar-item w3-button">Bitcoin-Forks.com</span>
   <a href="#" class="w3-bar-item w3-button w3-right">Euro | English</i></a>
 </div>
 
 
 <div class="w3-container w3-content">
  	<h2>Forks for Bitcoin</h2>(Last Update: 14.05.2018 14:45 MEZ)
-	<table class="w3-table sortable" id="table-forks">
-	</table>
-	<span class="w3-right" id="sum-forks"></span>
-</div>
 
 </div>
+
+
+<div class="w3-container w3-content">
+
+  <input class="w3-button w3-right" type="button" value="Filter by date">
+  <table class="w3-table sortable" id="table-forks">
+  </table>
+</div>
+
+
+<div class="w3-container w3-content">
+  <span class="w3-right" id="sum-forks"></span>
+</div>
+
+<div class="w3-container w3-bar w3-large w3-theme-d4">
+   <span class="w3-bar-item w3-button">Copyright 2018 - Frontend Solutions GmbH</span>
+    <span class="w3-bar-item w3-button">Imprint</span>
+    <span class="w3-bar-item w3-button">Data privacy</span>
+</div>
+
 
 </body>
 
@@ -347,14 +361,14 @@ var data = {
 var table = document.getElementById('table-forks')
 var sum = document.getElementById('sum-forks')
 
-var htmlToAdd = '<tr><th>#</th><th>Name</th><th>Fork date</th><th>Fork Block</th><th>Price</th><th>1 BTC=</th><th>1 BTC=</th></tr>'
+var htmlToAdd = '<tr><th>#</th><th>Name</th><th class="w3-hide-small">Fork date</th><th class="w3-hide-small">Fork Block</th><th class="w3-hide-small">Price</th><th class="w3-hide-small">1 BTC=</th><th>1 BTC=</th></tr>'
 var sumValues = 0
 
 data.coins[0].forks.map((e,index) => {
 	var row = document.createElement('tr')
 	var priceTimesRatio = e.Price*e.Ratio
 	sumValues+=priceTimesRatio
-	htmlToAdd += '<tr><td sorttable_customkey="'+index+'">#' + (index+1) + '</td><td><a href="'+e.Link+'">' + e.Name + '</a></td><td>'+ e.Date+'</td><td>'+ e.Block+'</td><td sorttable_customkey="'+e.Price+'">' + e.Price + ' € </td><td>' + e.Ratio + ' ' + e.ShortName + '</td><td sorttable_customkey="'+priceTimesRatio+'">'+priceTimesRatio+' € </td></tr>'
+	htmlToAdd += '<tr><td sorttable_customkey="'+index+'">#' + (index+1) + '</td><td><a href="'+e.Link+'">' + e.Name + '</a></td><td class="w3-hide-small">'+ e.Date+'</td><td class="w3-hide-small">'+ e.Block+'</td><td class="w3-hide-small" sorttable_customkey="'+e.Price+'">' + e.Price + ' € </td><td class="w3-hide-small">' + e.Ratio + ' ' + e.ShortName + '</td><td sorttable_customkey="'+priceTimesRatio+'">'+priceTimesRatio+' € </td></tr>'
 })
 
 
