--- a/website/test.htm
+++ b/website/test.htm
@@ -7,7 +7,7 @@
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3pro.css">
 <!--<link rel="stylesheet" href="https://www.w3schools.com/lib/w3-theme-blue-grey.css">-->
 <link rel="shortcut icon" href="favicon.ico">
-<script src="data.js"></script>
+<script src="bitcoin-forks.js"></script>
 <script src="sortable.js"></script>
 
 <style>
@@ -36,14 +36,18 @@ table.sortable thead {
 
   <span class="w3-bar-item w3-button">Bitcoin-Forks.com</span>
   <span class="w3-bar-item w3-button w3-right">English</span>
-  <span class="w3-bar-item w3-right">|</span>
+  <span class="w3-bar-item w3-right w3-hide-small">|</span>
   <span class="w3-bar-item w3-button w3-right">Euro</span>
 
 </div>
 
 
 <div class="w3-container w3-content">
- 	<h2>Forks for Bitcoin</h2>(Last Update: 14.05.2018 14:45 MEZ)
+ 	<h2>Forks for <select class="w3-select" style="width:auto" name="option">
+    <option value="" disabled selected>Bitcoin</option>
+    <option value="2">Ethereum</option>
+    <option value="3">Bitcoin Cash</option>
+  </select></h2>(Last Update: 14.05.2018 14:45 MEZ)
 
 </div>
 
@@ -56,25 +60,21 @@ table.sortable thead {
   </div>
 </div>
 
-
 <div class="w3-container w3-content">
   <span class="w3-right" id="sum-forks"></span>
 </div>
 
-
-
 <div class="w3-container w3-content"> 
-  If you like this project, feel free to support us via crypto donations !
+  If you like this project, feel free to <a>support us</a> !
 
 <table class="w3-table" id="table-donations">
   </table>
 
 </div>
 
-
-
 <div class="w3-container w3-bar w3-large w3-theme-d4">
-   <span class="w3-bar-item w3-button">Copyright 2018 - Frontend Solutions GmbH</span>
+   <a class="w3-bar-item w3-button w3-right" href="https://froso.de">Copyright 2018 - Frontend Solutions GmbH</a>
+    <a class="w3-bar-item w3-button" href="https://github.com/FrontendSolutionsGmbH/bitcoin-forks">Github</a>
     <span class="w3-bar-item w3-button">Imprint</span>
     <span class="w3-bar-item w3-button">Data Privacy</span>
 </div>
@@ -83,50 +83,7 @@ table.sortable thead {
 </body>
 
 
-<script type="text/javascript">
-
-var tableOuterElem = document.getElementById('table-forks-outer')
-var sum = document.getElementById('sum-forks')
-
-var htmlToAdd = '<table class="w3-table sortable" id="table-forks"><tr><th>#</th><th>Name</th><th class="w3-hide-small">Fork date</th><th class="w3-hide-small">Fork Block</th><th class="w3-hide-small">Price</th><th class="w3-hide-small">1 BTC=</th><th>1 BTC=</th></tr>'
-
-
-var sumValues = 0
-
-var data = window.data
-data.coins[0].forks.map((e,index) => {
-  var priceTimesRatio = e.Price*e.Ratio
-  sumValues+=priceTimesRatio
-  htmlToAdd += '<tr><td sorttable_customkey="'+index+'">#' + (index+1) + '</td><td><a href="'+e.Link+'">' + e.Name + '</a></td><td class="w3-hide-small">'+ e.Date+'</td><td class="w3-hide-small">'+ e.Block+'</td><td class="w3-hide-small" sorttable_customkey="'+e.Price+'">' + e.Price + ' € </td><td class="w3-hide-small">' + e.Ratio + ' ' + e.ShortName + '</td><td sorttable_customkey="'+priceTimesRatio+'">'+priceTimesRatio+' € </td></tr>'
-})
-
-
-sum.innerHTML = '<b>1 BTC= Sum forks '+sumValues+' €</b>'
-tableOuterElem.innerHTML = htmlToAdd + '</table>'
-
-
-
-
-var donations = [
-{
-  "Name": "Bitcoin",
-  "Address": "1BoatSLRHtKNngkdXEeobR76b53LETtpyT"
-}]
-
-var tableDonations = document.getElementById('table-donations')
-  var htmlToAdd = '' //<tr><th>Name</th><th>Address</th></tr>'
-
-
-donations.map((e,index) => {
-
-    var row = document.createElement('tr')
-    htmlToAdd += '<tr><td>' + e.Name + '</a></td><td>'+e.Address+'</td></tr>'
-  })
-
-//tableDonations.innerHTML = htmlToAdd
-
-
-</script>
+<script type="text/javascript" src="app.js"></script>
 
 
 </html>
