--- a/website/src/index.html
+++ b/website/src/index.html
@@ -4,7 +4,7 @@
 <title>BTC-Forks 1403,02 $</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no" />
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3pro.css">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <!--<link rel="stylesheet" href="https://www.w3schools.com/lib/w3-theme-blue-grey.css">-->
 <link rel="shortcut icon" href="favicon.ico">
 <script src="bitcoin-forks.js"></script>
@@ -43,25 +43,34 @@ table.sortable thead {
 
 
 <div class="w3-container w3-content">
- 	<h2>Forks for <select class="w3-select" style="width:auto" name="option">
+  <h2>Forks for <select class="w3-select" style="width:auto" name="option">
     <option value="" disabled selected>Bitcoin</option>
     <option value="2">Ethereum</option>
     <option value="3">Bitcoin Cash</option>
-  </select></h2>(Last Update: 14.05.2018 14:45 MEZ)
-
+  </select> </h2>14.05.2018 14:45 MEZ
 </div>
 
 
 <div class="w3-container w3-content">
 
-  <input class="w3-button w3-right" type="button" value="Filter by date">
-  <div id="table-forks-outer">
+   <div class="w3-right" id="sum-forks-top">
+      Loading ...</div>
+</div>
 
+
+<!--<div class="w3-container w3-content">
+  <input class="w3-button w3-right w3-button" type="" value="Filter by date">
+</div>-->
+
+<div class="w3-container w3-content">
+  <div id="table-forks-outer">
+      Loading ...
   </div>
 </div>
 
 <div class="w3-container w3-content">
-  <span class="w3-right" id="sum-forks"></span>
+  <div class="w3-right" id="sum-forks">
+      Loading ...</div>
 </div>
 
 <div class="w3-container w3-content"> 
