--- a/website/src/index.html
+++ b/website/src/index.html
@@ -4,7 +4,7 @@
 <title>BTC-Forks 1403,02 $</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no" />
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3pro.css">
 <!--<link rel="stylesheet" href="https://www.w3schools.com/lib/w3-theme-blue-grey.css">-->
 <link rel="shortcut icon" href="favicon.ico">
 <script src="bitcoin-forks.js"></script>
@@ -35,9 +35,11 @@ table.sortable thead {
 </div>
 
   <span class="w3-bar-item w3-button">Bitcoin-Forks.com</span>
-  <span class="w3-bar-item w3-button w3-right">English</span>
-  <span class="w3-bar-item w3-right w3-hide-small">|</span>
-  <span class="w3-bar-item w3-button w3-right">Euro</span>
+  <span class="w3-bar-item w3-button w3-right"></span>
+  <span class="w3-bar-item w3-right"><select style="width:auto" name="option" id="select-languages">
+  </select></span></span>
+  <span class="w3-bar-item w3-right"><select style="width:auto" name="option" id="select-currencies">
+  </select></span>
 
 </div>
 
