--- a/website/src/index.html
+++ b/website/src/index.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3pro.css">
 <!--<link rel="stylesheet" href="https://www.w3schools.com/lib/w3-theme-blue-grey.css">-->
 <link rel="shortcut icon" href="favicon.ico">
-<script src="bitcoin-forks.js"></script>
+<script src="res/bitcoin-forks.js"></script>
 <script src="sortable.js"></script>
 
 <style>
@@ -46,7 +46,7 @@ table.sortable thead {
 
 <div class="w3-container w3-content">
   <h2>Forks for <select class="w3-select" style="width:auto" name="option">
-    <option value="" disabled selected>Bitcoin</option>
+    <option value="" selected>Bitcoin</option>
     <option value="2">Ethereum</option>
     <option value="3">Bitcoin Cash</option>
   </select> </h2>14.05.2018 14:45 MEZ
@@ -94,6 +94,7 @@ table.sortable thead {
 </body>
 
 
+<script type="text/javascript" src="helper.js"></script>
 <script type="text/javascript" src="app.js"></script>
 
 
