--- a/website/static/list.html
+++ b/website/static/list.html
@@ -4,9 +4,9 @@
     <title>BTC-Forks 1403,02 $</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no"/>
-    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3pro.css">
-    <!--<link rel="stylesheet" href="https://www.w3schools.com/lib/w3-theme-blue-grey.css">-->
     <link rel="shortcut icon" href="favicon.ico">
+
+    {{{styles}}}
 
     <style>
 
@@ -16,7 +16,10 @@
             font-weight: bold;
             cursor: default;
         }
+
     </style>
+
+
 
 </head>
 
@@ -101,7 +104,7 @@
 </div>
 
 
-<script defer src="sortable.js"></script>
+{{{javascript}}}
 
 </body>
 
