seperation of concerns => crawler data and local data

--- a/website/static/list.html
+++ b/website/static/list.html
@@ -20,7 +20,6 @@
     </style>
 
 
-
 </head>
 
 <body class="w3-theme-l3">
@@ -67,7 +66,7 @@
 <div class="w3-container w3-content">
 
     <div class="w3-right" id="sum-forks-top">
-        <b>{{coin.shortName}}= Σ {{{sumForks}}}</b>
+        <b>1 {{coin.shortName}}= Σ {{{sumForks}}}</b>
     </div>
 </div>
 
@@ -84,7 +83,7 @@
 
 <div class="w3-container w3-content">
     <div class="w3-right" id="sum-forks">
-        <b>{{coin.shortName}}= Σ {{{sumForks}}}</b>
+        <b>1 {{coin.shortName}}= Σ {{{sumForks}}}</b>
     </div>
 </div>
 
