--- a/website/src/inc/header-list.html
+++ b/website/src/inc/header-list.html
@@ -32,15 +32,17 @@
 
     <div class="w3-bar-item w3-button">
         <div style="width:22px">
-            <svg xmlns="http://www.w3.org/2000/svg" version="1" viewBox="0, 0, 64, 64">
-                <path fill="#f7931a" d="M63 40A32 32 0 1 1 1 24a32 32 0 0 1 62 16z"/>
-                <path fill="#FFF"
-                      d="M46 27c1-4-2-6-7-8l2-5-4-1-1 5h-3l1-6-3-1-2 6-2-1-5-1-1 4 3 1 1 2-1 6-3 9-1 1h-3l-1 4 4 1h3l-2 6 4 1 1-6 3 1-1 6 3 1 1-6c6 1 11 1 13-5 1-4 0-7-3-8 2-1 4-2 4-6zm-8 12c-1 4-8 2-11 1l2-8c3 1 10 2 9 7zm1-12c-1 4-7 2-9 2l2-7c2 0 8 1 7 5z"/>
-            </svg>
+            <a href="/">
+                <svg xmlns="http://www.w3.org/2000/svg" version="1" viewBox="0, 0, 64, 64">
+                    <path fill="#f7931a" d="M63 40A32 32 0 1 1 1 24a32 32 0 0 1 62 16z"/>
+                    <path fill="#FFF"
+                          d="M46 27c1-4-2-6-7-8l2-5-4-1-1 5h-3l1-6-3-1-2 6-2-1-5-1-1 4 3 1 1 2-1 6-3 9-1 1h-3l-1 4 4 1h3l-2 6 4 1 1-6 3 1-1 6 3 1 1-6c6 1 11 1 13-5 1-4 0-7-3-8 2-1 4-2 4-6zm-8 12c-1 4-8 2-11 1l2-8c3 1 10 2 9 7zm1-12c-1 4-7 2-9 2l2-7c2 0 8 1 7 5z"/>
+                </svg>
+            </a>
         </div>
     </div>
 
-    <span class="w3-bar-item w3-button">allmyforks.com</span>
+    <span class="w3-bar-item w3-button"><a href="/">allmyforks.com</a></span>
     <span class="w3-bar-item w3-button w3-right"></span>
   <span class="w3-bar-item w3-right"><select style="width:auto" name="option" id="select-languages"
                                              onchange="location = this.value;">
