--- a/website/src/list.html
+++ b/website/src/list.html
@@ -57,7 +57,7 @@
             {{#each coin.forks}}
             <tr>
                 <td sorttable_customkey="{{@index}}">#{{@index}}</td>
-                <td><a href="{{link}}">{{name}}</a></td>
+                <td><a href="{{../language.id}}/{{id}}/{{../fiat.id}}/details.html">{{name}}</a></td>
                 <td class="w3-hide-small">{{date}}</td>
                 <td class="w3-hide-small">{{block}}</td>
                 <td class="w3-hide-small" sorttable_customkey="{{price}}">{{{fiatWithCurrency price ../fiat
