--- a/website/src/details.html
+++ b/website/src/details.html
@@ -3,7 +3,7 @@
 
 <div class="w3-container w3-content">
 
-    <h1>This is the detail page for {{coin.name}}</h1>
+    <h1>{{coin.name}}</h1>
 </div>
 
 
