--- a/website/src/imprint.html
+++ b/website/src/imprint.html
@@ -1,5 +1,8 @@
 {{> header-static}}
 
-Das ist ein Impressum
 
+<div class="w3-container w3-content">
+    Das ist ein Impressum
+
+</div>
 {{> footer}}
