--- a/website/src/inc/footer.html
+++ b/website/src/inc/footer.html
@@ -1,8 +1,12 @@
 <div class="w3-container w3-bar w3-large w3-theme-d4">
-    <a class="w3-bar-item w3-button w3-right" href="https://froso.de">Copyright 2018 - Frontend Solutions GmbH</a>
-    <a class="w3-bar-item w3-button" href="https://github.com/FrontendSolutionsGmbH/bitcoin-forks">Github</a>
+    <a class="w3-bar-item w3-button w3-right" href="https://froso.de" target="new">Copyright 2018 - Frontend Solutions
+        GmbH</a>
+    <span class="w3-bar-item w3-button"><a href="/{{language.id}}/howto.html">How do i get my forks-money?</a></span>
+    <span class="w3-bar-item w3-button"><a href="/{{language.id}}/links.html">More to read</a></span>
+    <a class="w3-bar-item w3-button" href="https://github.com/FrontendSolutionsGmbH/bitcoin-forks"
+       target="new">Github</a>
     <span class="w3-bar-item w3-button"><a href="/{{language.id}}/imprint.html">Imprint</a></span>
-    <span class="w3-bar-item w3-button">Data Privacy</span>
+    <span class="w3-bar-item w3-button"><a href="/{{language.id}}/privacy.html">Data Privacy</a></span>
 </div>
 
 
