--- a/website/src/privacy.html
+++ b/website/src/privacy.html
@@ -1,5 +1,7 @@
 {{> header-static}}
 
-Das ist die Datenschutzseite
 
+<div class="w3-container w3-content">
+    Das ist die Datenschutzseite
+</div>
 {{> footer}}
