links and supportus page

--- a/website/src/inc/footer.html
+++ b/website/src/inc/footer.html
@@ -2,7 +2,8 @@
     <a class="w3-bar-item w3-button w3-right" href="https://froso.de" target="new">Copyright 2018 - Frontend Solutions
         GmbH</a>
     <span class="w3-bar-item w3-button"><a href="/{{language.id}}/howto.html">How do i get my forks-money?</a></span>
-    <span class="w3-bar-item w3-button"><a href="/{{language.id}}/links.html">More to read</a></span>
+    <span class="w3-bar-item w3-button"><a href="/{{language.id}}/links.html">Links</a></span>
+    <span class="w3-bar-item w3-button"><a href="/{{language.id}}/supportus.html">Support us</a></span>
     <a class="w3-bar-item w3-button" href="https://github.com/FrontendSolutionsGmbH/bitcoin-forks"
        target="new">Github</a>
     <span class="w3-bar-item w3-button"><a href="/{{language.id}}/imprint.html">Imprint</a></span>
