--- a/website/src/inc/header-static.html
+++ b/website/src/inc/header-static.html
@@ -30,7 +30,7 @@
 
 <div class="w3-bar w3-theme-d4">
 
-    <div class="w3-bar-item w3-button">
+    <div class="w3-bar-item">
         <div style="width:22px">
             <a href="/">
                 <svg xmlns="http://www.w3.org/2000/svg" version="1" viewBox="0, 0, 64, 64">
@@ -43,7 +43,7 @@
     </div>
 
 
-    <span class="w3-bar-item w3-button"><a href="/">allmyforks.com</a></span>
+    <a class="w3-bar-item w3-button" href="/">allmyforks.com</a>
     <span class="w3-bar-item w3-button w3-right"></span>
   <span class="w3-bar-item w3-right"><select style="width:auto" name="option" id="select-languages"
                                              onchange="location = this.value;">
