--- a/website/src/links.html
+++ b/website/src/links.html
@@ -1,13 +1,18 @@
 {{> header-static}}
 
-<h2>Interesting links</h2>
 
-<ul>
-    {{#each links}}
+<div class="w3-container w3-content">
 
-    <li>{{url}}</li>
+    <h1>Interesting links</h1>
 
-    {{/each}}
+    <ul>
+        {{#each links}}
 
-</ul>
+        <li>{{url}}</li>
+
+        {{/each}}
+
+    </ul>
+
+</div>
 {{> footer}}
