--- a/website/src/imprint.html
+++ b/website/src/imprint.html
@@ -5,5 +5,8 @@
 
     <h1>Imprint</h1>
 
+    <a class="w3-bar-item w3-button w3-right" href="https://froso.de" target="new">Copyright 2018 - Frontend Solutions
+        GmbH</a>
+        
 </div>
 {{> footer}}
