--- a/website/src/inc/footer.html
+++ b/website/src/inc/footer.html
@@ -1,15 +1,11 @@
 <div class="w3-container w3-bar w3-large w3-theme-d4">
-    <a class="w3-bar-item w3-button w3-right" href="https://froso.de" target="new">Copyright 2018 - Frontend Solutions
-        GmbH</a>
-    <span class="w3-bar-item w3-button"><a href="/{{language.id}}/howto.html">How do i get my forks-money?</a></span>
-    <span class="w3-bar-item w3-button"><a href="/{{language.id}}/links.html">Links</a></span>
-    <span class="w3-bar-item w3-button"><a href="/{{language.id}}/supportus.html">Support us</a></span>
-    <a class="w3-bar-item w3-button" href="https://github.com/FrontendSolutionsGmbH/bitcoin-forks"
+    <a class="w3-bar-item w3-button" href="/{{language.id}}/howto.html">How do i get my forks-money?</a>
+    <a class="w3-bar-item w3-button" href="/{{language.id}}/links.html">Read more about forks</a>
+    <a class="w3-bar-item w3-button w3-right" href="https://github.com/FrontendSolutionsGmbH/bitcoin-forks"
        target="new">Github</a>
-    <span class="w3-bar-item w3-button"><a href="/{{language.id}}/imprint.html">Imprint</a></span>
-    <span class="w3-bar-item w3-button"><a href="/{{language.id}}/privacy.html">Data Privacy</a></span>
+    <a class="w3-bar-item w3-button w3-right" href="/{{language.id}}/imprint.html">Imprint</a>
+    <a class="w3-bar-item w3-button w3-right" href="/{{language.id}}/privacy.html">Data Privacy</a>
 </div>
-
 
 {{> javascript}}
 
