--- a/website/src/inc/header-list.html
+++ b/website/src/inc/header-list.html
@@ -43,18 +43,18 @@
     </div>
 
     <a class="w3-bar-item w3-button" href="/">allmyforks.com</a>
-    <span class="w3-bar-item w3-button w3-right"></span>
   <span class="w3-bar-item w3-right"><select style="width:auto" name="option" id="select-languages"
                                              onchange="location = this.value;">
       {{#each selectLanguages}}
         <option value="{{value}}" {{selected}}>{{title}}</option>
       {{/each}}
 
-  </select></span></span>
+  </select></span>
+  
   <span class="w3-bar-item w3-right"><select style="width:auto" name="option" id="select-currencies"
                                              onchange="location = this.value;">
          {{#each selectFiats}}
-        <option value="{{value}}" {{selected}}>{{title}}</option>
+        <option value="{{value}}" {{selected}} data-fiat-option="{{id}}">{{title}}</option>
       {{/each}}
   </select></span>
 
