--- a/website/src/list.html
+++ b/website/src/list.html
@@ -6,7 +6,7 @@
         <tr>
             {{#each coinsWithForks}}
 
-            <td><b>1 {{shortName}}= Σ {{{fiatWithCurrency priceSumForks ../fiat ../language}}}</b></td>
+            <td><b>1 {{shortName}}= Σ {{{fiatWithCurrencyInSpan priceSumForks ../fiat ../language}}}</b></td>
             {{/each}}
 
         </tr>
@@ -30,7 +30,7 @@
 <div class="w3-container w3-content">
 
     <div class="w3-right" id="sum-forks-top">
-        <b>1 {{coin.shortName}}= Σ {{{fiatWithCurrency coin.priceSumForks fiat language}}}</b>
+        <b>1 {{coin.shortName}}= Σ {{{fiatWithCurrencyInSpan coin.priceSumForks fiat language}}}</b>
     </div>
 </div>
 
@@ -57,14 +57,14 @@
             {{#each coin.forks}}
             <tr>
                 <td sorttable_customkey="{{math @index '+' 1}}">#{{math @index '+' 1}}</td>
-                <td><a href="/{{../language.id}}/{{id}}/{{../fiat.id}}/details.html">{{name}}</a></td>
+                <td><a href="/{{../language.id}}/details/{{id}}/">{{name}}</a></td>
                 <td class="w3-hide-small">{{date}}</td>
                 <td class="w3-hide-small">{{block}}</td>
-                <td class="w3-hide-small" sorttable_customkey="{{price}}">{{{fiatWithCurrency price ../fiat
+                <td class="w3-hide-small" sorttable_customkey="{{price}}">{{{fiatWithCurrencyInSpan price ../fiat
                     ../language}}}
                 </td>
                 <td class="w3-hide-small">{{ratio}} {{shortName}}</td>
-                <td sorttable_customkey="{{priceTimesForkRatio}}">{{{fiatWithCurrency priceTimesForkRatio ../fiat
+                <td sorttable_customkey="{{priceTimesForkRatio}}">{{{fiatWithCurrencyInSpan priceTimesForkRatio ../fiat
                     ../language}}}
                 </td>
                 <td class="w3-hide-small">+ 2%</td>
@@ -84,12 +84,12 @@
 
 <div class="w3-container w3-content">
     <div class="w3-right" id="sum-forks">
-        <b>1 {{coin.shortName}}= Σ {{{fiatWithCurrency coin.priceSumForks fiat language}}}</b>
+        <b>1 {{coin.shortName}}= Σ {{{fiatWithCurrencyInSpan coin.priceSumForks fiat language}}}</b>
     </div>
 </div>
 
 <div class="w3-container w3-content">
-    If you like this project and that it is "ad-free", feel free to <a href="/{{language.id}}/supportus.html">support
+    If you like this project, <a href="/{{language.id}}/supportus.html">support
     us</a> !
 </div>
 
