--- a/website/src/inc/footer.html
+++ b/website/src/inc/footer.html
@@ -1,10 +1,10 @@
 <div class="w3-container w3-bar w3-large w3-theme-d4">
-    <a class="w3-bar-item w3-button" href="/{{language.id}}/howto.html">How do i get my forks-money?</a>
-    <a class="w3-bar-item w3-button" href="/{{language.id}}/links.html">Read more about forks</a>
+    <a class="w3-bar-item w3-button" href="/{{language.id}}/links">What are forks</a>
+    <a class="w3-bar-item w3-button" href="/{{language.id}}/howto/">How do i get my fork money</a>
     <a class="w3-bar-item w3-button w3-right" href="https://github.com/FrontendSolutionsGmbH/bitcoin-forks"
        target="new">Github</a>
-    <a class="w3-bar-item w3-button w3-right" href="/{{language.id}}/imprint.html">Imprint</a>
-    <a class="w3-bar-item w3-button w3-right" href="/{{language.id}}/privacy.html">Data Privacy</a>
+    <a class="w3-bar-item w3-button w3-right" href="/{{language.id}}/imprint/">Imprint</a>
+    <a class="w3-bar-item w3-button w3-right" href="/{{language.id}}/privacy/">Data Privacy</a>
 </div>
 
 {{> javascript}}
