--- a/website/src/imprint.html
+++ b/website/src/imprint.html
@@ -7,6 +7,9 @@
 
     <a class="w3-bar-item w3-button w3-right" href="https://froso.de" target="new">Copyright 2018 - Frontend Solutions
         GmbH</a>
-        
+
+    <a class="w3-bar-item w3-button w3-right" href="https://github.com/FrontendSolutionsGmbH/bitcoin-forks"
+       target="new">Github</a>
+
 </div>
 {{> footer}}
