--- a/website/src/inc/header.html
+++ b/website/src/inc/header.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <title>1 {{coin.shortName}}= Σ {{{fiatWithCurrency coin.priceSumForks fiat language}}}</title>
+    <title>{{{title}}}</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no"/>
     <link rel="shortcut icon" href="/favicon.ico">
