--- a/website/src/details.html
+++ b/website/src/details.html
@@ -25,7 +25,7 @@
         </ul>
     </div>
 
- <div class="w3-container w3-cell">
+    <div class="w3-container w3-cell">
         <h2>Links</h2>
         <ul>
             {{#each links}}
@@ -48,7 +48,7 @@
         <h2>Price Graph (7d)</h2>
         {{#with priceGraphData}}
         <svg xmlns="http://www.w3.org/2000/svg" version="1" width="{{width}}" height="{{height}}"
-             >
+        >
             <path stroke="#f7931a" stroke-width="2" fill="transparent" stroke-linecap="square"
                   d="{{data}}"/>
         </svg>
@@ -60,13 +60,13 @@
 
     <div class="w3-container w3-cell">
         <h2>Markets</h2>
-         {{#each ../markets}}
-            <li><a href="{{url}}" target="market-{{id}}">{{name}}</a></li>
-            {{/each}}
+        {{#each ../markets}}
+        <li><a href="{{url}}" target="market-{{id}}">{{name}}</a></li>
+        {{/each}}
     </div>
     <div class="w3-container w3-cell w3-hide-small">
         <h2>How do i get my fork-money</h2>
-        <a href="/{{../language.id}}/howto.html">Click here</a>
+        <a href="/{{../language.id}}/howto/">Click here</a>
     </div>
 
 
