--- a/website/src/imprint.html
+++ b/website/src/imprint.html
@@ -1,15 +1,16 @@
 {{> header-static}}
 
 
-<div class="w3-container w3-content">
+<div class="w3-container w3-content w3-center">
 
-    <h1>Imprint</h1>
+    {{{intlGet "imprint"}}}
 
-    <a class="w3-bar-item w3-button w3-right" href="https://froso.de" target="new">Copyright 2018 - Frontend Solutions
+    <a class="w3-bar-item w3-button w3-right" href="https://froso.de" target="new">Frontend Solutions
         GmbH</a>
 
     <a class="w3-bar-item w3-button w3-right" href="https://github.com/FrontendSolutionsGmbH/bitcoin-forks"
        target="new">Github</a>
+
 
 </div>
 {{> footer}}
