--- a/website/src/privacy.html
+++ b/website/src/privacy.html
@@ -2,10 +2,6 @@
 
 
 <div class="w3-container w3-content">
-
-
-    <h1>Privacy Policy</h1>
-
-    Das ist die Datenschutzseite
+    {{{intlGet "privacy"}}}
 </div>
 {{> footer}}
